Update README.md
Ajout des options des VM.