@@ -1,7 +1,8 @@
 # exercicejmapper
 
 
-Executer avec les option de la VM suivantes :
+Executer avec les option de la VM suivantes dans les éditeurs :
+--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED
 
 
 
